[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fschat"
version = "0.2.23"
description = "An open platform for training, serving, and evaluating large language model based chatbots."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate>=0.21", "einops", "fastapi", "gradio", "httpx", "markdown2[all]", "nh3", "numpy",
    "peft", "prompt_toolkit>=3.0.0", "pydantic<2,>=1", "requests", "rich>=10.0.0",
    "sentencepiece", "shortuuid", "tiktoken", "tokenizers>=0.12.1", "torch", "transformers>=4.31.0",
    "uvicorn", "wandb"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]
train = ["flash-attn>=2.0"]
eval = ["openai", "anthropic>=0.3", "ray"]

[project.urls]
"Homepage" = "https://github.com/lm-sys/fastchat"
"Bug Tracker" = "https://github.com/lm-sys/fastchat/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
